Added new font Cabin to Css
Added new font to CSS

--- a/css/Main.css
+++ b/css/Main.css
@@ -1,13 +1,17 @@
 html {
-    background-color: linear-gradient(#4F7062, #618a79, #8AAD9F, #ABC4BA, #C9D9D3, #f0f4f3);
-}
-html {
     background-color: linear-gradient(rgba(79, 112, 98, 1), rgba(97, 138, 121, 1), rgba(138, 173, 159, 1), rgba(171, 196, 186, 1), rgba(201, 217, 211, 1), rgba(240, 244, 243, 1));
 }
+* {
+  box-sizing: border-box;
+}
+
+div {
+    margin: 0 auto;
+  }
 
 @font-face {
-    font-family: f;
-    src: url(); /* go to font squirrel to make cabin url*/
+    font-family: "cabin";
+    src: url("../fonts/cabin.ttf") format("truetype");
 }
 
 html {
@@ -32,9 +36,20 @@ h2 {position: absolute;
     width: 110px;
     height: 32px;
     left: 0px;
-    top: 0px;}
+    top: 0px;
+}
 p {position: absolute;
     width: 314px;
     height: 345px;
     left: 0px;
     top: 32px;}
+
+body{
+    padding-bottom: 6rem;
+
+}
+
+img {
+    height: auto;
+    width: 100%;
+}
