--- a/css/Main.css
+++ b/css/Main.css
@@ -28,15 +28,15 @@ html {
     --font-sans-serif: cabin, sans-serif;
 }
 
-ul{
-  list-style: none;}
+a:link { text-decoration: none; color:rgba(255, 255, 255, 1)}
+
 
 h1, h2, h3 p, ul { font-family: cabin;}
-h1 { color:rgba(255, 255, 255, 1); font-family: cabin; font-size: 28px; font-style: normal; font-variant: small-caps; font-weight: 700; line-height: 50px; }
-h2 { color:rgba(255, 255, 255, 1); font-family: cabin; font-size: 24px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 20px; }
-h3 { color:rgba(78, 76, 76, 1); font-family: cabin; font-size: 24px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 0px; }
-p { color: rgba(78, 76, 76, 1); font-family: cabin; font-size: 16px; font-style: normal; font-variant: normal; font-weight: 100; line-height: 1.4; } 
-ul { color:rgba(255, 255, 255, 1); font-family: cabin; font-size: 24px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 24px; }
+h1 { color:var(--color-light); font-family: cabin; font-size: 28px; font-style: normal; font-variant: small-caps; font-weight: 700; line-height: 50px; }
+h2 { color:var(--color-light); font-family: cabin; font-size: 24px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 20px; }
+h3 { color: var(--color-grey); font-family: cabin; font-size: 24px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 0px; }
+p { color: var(--color-grey); font-family: cabin; font-size: 16px; font-style: normal; font-variant: normal; font-weight: 100; line-height: 1.4; } 
+ul { color:rgba(255, 255, 255, 1); font-family: cabin; font-size: 24px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 32px; }
 
 body{
     flex-direction: column;
@@ -59,14 +59,16 @@ margin: auto;
 }
 
 .logo{
-  padding: 0 20px 0;
   max-width: fit-content;
+  margin: auto;
+  text-align: center;
   flex: auto;
 }
 
-.nav{
+.nav {
   text-align: center;
-  flex: auto;
+  margin: auto;
+  padding-inline-start: 0 50px;
 }
 
 .title {
@@ -87,11 +89,13 @@ margin: auto;
 }
 
 .logo2{
-  margin: .5em 3em .5em;
+  margin: auto;
   max-width: fit-content;
 }
 
 img{
-  margin: auto;
+  margin:auto;
   flex: auto;
+  text-align: center;
+  max-width: fit-content;
 }
