Editing Photography Photos
Changing the direction of photos in my Photography Page

--- a/css/Main.css
+++ b/css/Main.css
@@ -28,7 +28,7 @@ html {
     --font-sans-serif: cabin, sans-serif;
 }
 
-a:link { text-decoration: none; color:rgba(255, 255, 255, 1)}
+a:link { text-decoration: none; color:rgba(255, 255, 255, 1);}
 
 
 h1, h2, h3 p, ul { font-family: cabin;}
